# ChaiLauncher

./: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  installer.rs  main.rs  minecraft.rs  modpack.rs  storage.rs
src-tauri/src/docker/: commands.rs  manager.rs  mod.rs  templates.rs  types.rs
src-tauri/src/launchers/: gdlauncher.rs  mod.rs  modrinth.rs  multimc.rs  prism.rs
src-tauri/src/minecraft/: assets.rs  commands.rs  core.rs  instances.rs  java.rs  launcher.rs  legacy.rs  mod.rs  mod_scanner.rs  modern.rs  versions.rs
src-tauri/src/minecraft/commands/: external.rs  instances.rs  java.rs  mod.rs  settings.rs  versions.rs
src-tauri/src/modpack/: api.rs  commands.rs  mod.rs  types.rs
src-tauri/src/mods/: commands.rs  loaders.rs  manager.rs  mod.rs  types.rs
src-tauri/src/mods/api/: common.rs  curseforge.rs  mod.rs  modrinth.rs
src/components/: AccountsView.tsx  CreateInstanceModal.tsx  DeployServerModal.tsx  DockerConnectionModal.tsx  ExitConfirmationModal.tsx  HomeView.tsx  InstanceCard.tsx  InstanceSettingsModal.tsx  InstancesView.tsx  JavaInstallModal.tsx  LauncherSidebar.tsx  ModpackBrowser.tsx  ModpackCreator.tsx  ModsView.tsx  ServerLogsModal.tsx  ServersView.tsx  SettingsView.tsx
src/components/accounts/: AccountCard.tsx  AddAccountModal.tsx  AuthTokenModal.tsx  AuthTokenStatus.tsx
src/components/docker/: ConnectionForm.tsx  ConnectionTestResult.tsx
src/components/instance/: index.ts
src/components/instance-settings/: GeneralTab.tsx  TabNavigation.tsx
src/components/instance/InstanceCard/: InstanceCard.tsx  index.ts
src/components/instance/InstanceList/: InstanceList.tsx  index.ts
src/components/modals/: index.ts
src/components/modals/CreateInstanceModal/: CreateInstanceModal.tsx  index.ts
src/components/modals/ExitConfirmationModal/: ExitConfirmationModal.tsx  index.ts
src/components/servers/: AdvancedServerSettings.tsx  BasicServerSettings.tsx
src/components/ui/: index.ts
src/components/ui/Button/: Button.tsx
src/components/ui/ContextMenu/: ContextMenu.tsx  index.ts
src/components/ui/Modal/: Modal.tsx
src/components/ui/ProgressBar/: ProgressBar.tsx
src/hooks/: index.ts  useAccounts.ts  useDockerConnection.ts  useInfiniteModpacks.ts  useInfiniteMods.ts  useInfiniteNews.ts  useInfiniteScroll.ts  useInstanceSettings.ts  useInstances.ts  useMinecraftVersions.ts  useServerDeployment.ts  useSettings.ts
src/services/: accountService.ts  index.ts  instanceService.ts  javaService.ts  minecraftService.ts  settingsService.ts
src/types/: accounts.ts  index.ts  minecraft.ts  mods.ts  servers.ts
src/utils/: colors.ts
