[package]
name = "chailauncher"
version = "0.1.0"
description = "Modern Minecraft launcher inspired by GDLauncher"
authors = ["ChaiLauncher Team"]
license = "MIT"
repository = ""
edition = "2021"


[dependencies]
tauri = { version = "2.7.0", features = ["unstable"] }
tauri-plugin-fs = "2.4.1"
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
bytes = "1.0"
base64 = "0.22"
sha1 = "0.10"
zip = "0.6"
async-trait = "0.1"
dirs = "5.0"
log = "0.4"
urlencoding = "2.1"
walkdir = "2.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["sysinfoapi", "memoryapi"] }

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
