[package]
name = "chailauncher"
version = "0.6.0"
description = "Modern Minecraft launcher inspired by GDLauncher"
authors = ["ChaiLauncher Team"]
license = "MIT"
repository = ""
edition = "2021"


[dependencies]
tauri = { version = "2.8.2", features = ["unstable"] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-shell = "2.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json", "stream"] }
anyhow = "1.0.99"
uuid = { version = "1.18.0", features = ["v4"] }
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
sha1 = "0.10.6"
zip = "2.4"
dirs = "6.0.0"
urlencoding = "2.1.3"
walkdir = "2.5.0"
oauth2 = "4.4.2"
warp = { version = "0.4.2", features = ["server"] }
open = "5.3.2"
lazy_static = "1.5.0"
async-trait = "0.1.81"
thiserror = "1.0.69"
hex = "0.4.3"
mcvm = { git = "https://github.com/tristanpoland/Chai-MCVM", rev = "c8f5d33e238519ab663634fd402edcae85535f60"}
bollard = "0.17.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi"] }

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
